# my-uv-test

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/my_uv_test/: __init__.py  some_things.py
tests/: some_things_test.py
